# corrosion

./: README.md  corrosion.cabal
app/: Main.hs
idlebox/: Main.hs
src/: Builtins.hs  Core.hs  Coreutils.hs  Corrosion.hs  Filesystem.hs  Findutils.hs  InternalPrelude.hs  Scripting.hs
src/Filesystem/: OsPath.hs
